# sinatra

./: .gitignore  README.md  main.py  pyproject.toml  sinatra.yaml
sinatra/: cli.py  config.py  encoder.py  main.py
sinatra/recorder/: base.py  engine.py
sinatra/recorder/backends/: windows.py
tests/: test_sinatra.py
