[project]
name = "sinatra"
version = "0.1.0"
description = "Lightweight audio recorder CLI for Windows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sounddevice>=0.5.0",
    "numpy>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
sinatra = "sinatra.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"